--- a/SecretWord/Views/Home/Index.cshtml
+++ b/SecretWord/Views/Home/Index.cshtml
@@ -1,3 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model SecretWordModel
+
+    @{
+        ViewData["Title"] = "Secret Word";
+    }
+
+
+
+        <div class="boardContainer">
+            <div class="row">
+                <div class="col s12">
+                    <div class="card indigo lighten-4">
+                        <div class="card-content white-text">
+                            <h2 class="secretWord center"> im empty</h2>
+                            <h5 class="center"> also empty </h5>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <h2 class="secretWord center"></h2>
+            <div class="row">
+                <div class="secretBoard col s12">
+                    <form asp-action="AddWord" asp-controller="Home" method="post">
+                        <div class="input-field">
+
+                            <input type="text" class="validate" name="SecretWord">
+                            <label>Enter Secret Message</label>
+                            <input type="submit" class="waves-effect waves-light btn" value="Save Word" />
+                        </div>
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
