--- a/SecretWord/Views/Home/Words.cshtml
+++ b/SecretWord/Views/Home/Words.cshtml
@@ -5,17 +5,10 @@
 @foreach (var word in Model)
 {
     <div class="row">
-        <div class="col m6 offset-l3 offset-m3 offset-s3">
-            <div class="card indigo lighten-4 cardHeight">
-                <div class="card-content white-text">
 
-                    <p class="word left">@word.Word</p>
-                    <p class="right">@word.TimeStamp.Month/@word.TimeStamp.Day/@word.TimeStamp.Year</p>
+                    <h4 class="panel-title" >@word.Word</h4>
+                    <p class="panel-info">Created on @word.TimeStamp.Month/@word.TimeStamp.Day/@word.TimeStamp.Year</p>
 
                 </div>
-
-            </div>
-        </div>
-    </div>
-
+       
 }
