--- a/SecretWord/wwwroot/css/site.css
+++ b/SecretWord/wwwroot/css/site.css
@@ -3,6 +3,10 @@
     padding-bottom: 20px;
 }
 
+navbar{
+    background-color: crimson;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
@@ -36,10 +40,7 @@ textarea {
     padding-left: 0.5em;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
+
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
